[gd_scene load_steps=4 format=3 uid="uid://d0mojmdvqls4v"]

[ext_resource type="Script" uid="uid://cqfjdm2a601mp" path="res://scripts/dialogue/dialogue_display.gd" id="1_bfpow"]
[ext_resource type="Texture2D" uid="uid://dg73wk3sidnam" path="res://Images/Textures/Dialogue_box.png" id="2_bfpow"]
[ext_resource type="Texture2D" uid="uid://c4vehwl6b341n" path="res://Images/Spells/rock.png" id="2_fyky8"]

[node name="DialogueScreen" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_bfpow")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(166.5, 438.5)
scale = Vector2(10.5625, 10.5625)
texture = ExtResource("2_fyky8")

[node name="DialogueBox" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(63, 500)
scale = Vector2(8, 8)
texture = ExtResource("2_bfpow")
centered = false

[node name="DialogueText" type="Label" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 511.0
offset_right = 1052.0
offset_bottom = 619.0
text = "Testing! This is a dialogue box"

[node name="LetterTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LetterTimer" to="." method="_on_letter_timer_timeout"]
